# lab6-oop24-Kornivska

./: CMakeLists.txt  звіт 6 Корнівська.docx
OOPLab6T/: OOPLab6T.vcxproj  OOPLab6T.vcxproj.filters  base.h  d1.h  d11.h  d11v.h  d1v.h  d2.h  d21.h  d21v.h  d22.h  d22v.h  d2v.h  figure.h  main.cpp  task2.h  task3.h
